# CAD_DeepLearning

./: .envrc  .gitignore  Makefile  README.md  SETUP.md  environment.yml  pyproject.toml
src/cad_dl/: __init__.py
src/cad_dl/datasets/: __init__.py
src/cad_dl/datasets/automate/: __init__.py  dataset.py  loader.py
src/cad_dl/datasets/automate/scripts/: compute_stats.py
src/cad_dl/geometry/: __init__.py  render.py  sampling.py  step.py
src/cad_dl/pipeline/: __init__.py  cli.py  dataset.py  io.py  sampling.py  schema.py
src/cad_dl/viz/: __init__.py  colors.py  gallery.py  pointcloud.py
